--- a/index.html
+++ b/index.html
@@ -15,12 +15,26 @@
     <header id="app_header">
             <div class="link_header debug">
                 <div class="banner_link">
-                    <div class="logo"></div>
-                    <div class="link"></div>
-                    <div class="login"></div>
+                    <div class="logo">
+                        <img src="./assets/img/logo.svg" alt="logo">
+                    </div>
+                    <!-- /logo -->
+
+                    <div class="link">
+                        <div> <a href="#">Scarica</a> </div>
+                        <div> <a href="#">Perchè Discord</a> </div>
+                        <div> <a href="#">Nitro</a> </div>
+                        <div> <a href="#">Sicurezza</a> </div>
+                        <div> <a href="#">Assistenza</a> </div>
+                    </div>
+                    <!-- /link complete -->
+                    
+                        <button class="login">Accedi</button>
+                        <!-- /button -->
                 </div>
-                <!-- /banner link -->
             </div>
+             <!-- /banner link -->
+            
             <div class="container_header">
                 <div class="text_header"></div>
             </div>
