--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     <img class="img_main" src="./assets/img/item1.svg" alt="">
                 </div>
                 <div class="text_banner">
-                    <p><h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2></p>
+                    <p><h2>Dove trovarsi è facile</h2></p>
                     <div class="banner_p">
-                        <p>I server Discord sono organizzati in canali telematiciin cui puoi collaborare,condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                        <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare</p>
                     </div>
                 </div>
                
@@ -74,25 +74,50 @@
         </section>
         <!-- /section banner1 -->
 
-        <section class="section_banner">
-            <div class="container_banner">
-                <div class="text_banner2"></div>
-                <div class="image_banner"></div>
+        <section class="section_banner2">
+            <div class="container_banner2">
+                <div class="text_banner2">
+                    <p><h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2></p>
+                    <div class="banner_p">
+                        <p>I server Discord sono organizzati in canali telematiciin cui puoi collaborare,condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
+                <div class="image_banner2">
+                    <img src="./assets/img/item2.svg" alt="">
+                </div>
             </div>
         </section>
         <!-- /section banner2 -->
 
         <section class="section_banner">
             <div class="container_banner">
-                <div class="image_banner"></div>
-                <div class="text_banner"></div>
+                <div class="image_banner">
+                    <img src="./assets/img/item3.svg" alt="">
+                </div>
+                <div class="text_banner">
+                    <p><h2>Da pochi a un fandom</h2></p>
+                    <div class="banner_p">
+                        <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile.Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- /section banner3 -->
 
         <section class="main_end">
             <div class="container-main_end">
+                <div>
+                    <h2 class="text-main_end">Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivizione schermo.</p>
+                </div>
+                <img class="img_main_end" src="./assets/img/item4-big.svg" alt="">
+                <div>
+                    <h4>Pronto a iniziare la tua avventura?</h4>
+                </div>
+                <div>
+                    <button class="download3">&Darr; Scarica per Mac</button>
+                </div>
             </div>
+         
         </section>
         <!-- /section main end -->
     </main>
