--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     <img class="img_main" src="./assets/img/item1.svg" alt="">
                 </div>
                 <div class="text_banner">
-                    <p><h2>Dove trovarsi è facile</h2></p>
+                    <p><h2>Un luogo a invito con tutto lo spazio necessiario per parlare</h2></p>
                     <div class="banner_p">
-                        <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare</p>
+                        <p>I server Discord sono organizzati in canali telematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                     </div>
                 </div>
                
@@ -74,19 +74,27 @@
         </section>
         <!-- /section banner1 -->
 
-        <section class="section_banner2">
-            <div class="container_banner2">
-                <div class="text_banner2">
-                    <p><h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2></p>
+        <section class="section_banner">
+            <div class="container_banner">
+                <div class="text_banner">
+                    <p>
+                        <h2>Dove trovarsi è facile</h2>
+                    </p>
+
                     <div class="banner_p">
-                        <p>I server Discord sono organizzati in canali telematiciin cui puoi collaborare,condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                        <p>
+                        Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.
+                        </p>
+                        
+                    </div>
                 </div>
-                <div class="image_banner2">
-                    <img src="./assets/img/item2.svg" alt="">
-                </div>
+            <div class="image_banner">
+                <img class="img_main" src="./assets/img/item2.svg" alt="">
+            </div>
             </div>
         </section>
         <!-- /section banner2 -->
+
 
         <section class="section_banner">
             <div class="container_banner">
@@ -125,12 +133,85 @@
 
     <footer id="app_footer">
         <section class="container_footer">
+
             <div class="columns">
-                <div class="col1"></div>
-                <div class="col2"></div>
-                <div class="col2"></div>
-                <div class="col2"></div>
-                <div class="col2"></div>
+
+                <div class="col1">
+                    <div>
+                        <h3>Il tuo posto per parlare</h3>
+                    </div>
+                    <div class="container_ita" >
+                        <img class="ita" src="./assets/img/ita.png" alt="Bandiera italiana">
+                        <span class="language">Italiano &#9660; </span>
+                    </div>
+                    <div class="social">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                </div>
+                <!-- col1 -->
+
+                <div class="col2">
+                    <div class="name_list">
+                        <span>Prodotto</span>
+                        <ul>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- /col2 -->
+
+                <div class="col2">
+                    <div class="name_list">
+                        <span>Compagnia</span>
+                        <ul>
+                            <li>Chi siamo</li>
+                            <li>Lavora con noi</li>
+                            <li>Marchio</li>
+                            <li>Redazione</li>
+                            <li>Negozio</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- /col3 -->
+
+                <div class="col2">
+                    <div class="name_list">
+                        <span>Risorse</span>
+                        <ul>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- /col4 -->
+
+                <div class="col2">
+                    <div class="name_list">
+                        <span>Norme</span>
+                        <ul>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- /col5 -->
             </div>
         </section>
         <!-- /section columns footer -->
@@ -139,8 +220,14 @@
 
         <section class="section_footer">
             <div class="banner_registration">
-                <div class="logo-banner"></div>
-                <div class="registration-banner"></div>
+                <div class="logo-footer">
+                    <div class="logo">
+                        <img src="./assets/img/logo.svg" alt="logo">
+                    </div>
+                </div>
+                <div class="registration-banner">
+                    <button class="sign_up">Registrati</button>
+                </div>
             </div>
         </section>
         <!-- /section banner footer -->
