add app footer and image stars

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
                 <img class="img_main_end" src="./assets/img/item4-big.svg" alt="">
                 <div>
-                    <h4>Pronto a iniziare la tua avventura?</h4>
+                    <h4 class="stars">Pronto a iniziare la tua avventura?</h4>
                 </div>
                 <div>
                     <button class="download3">&Darr; Scarica per Mac</button>
